[workspace]
resolver = "2"
members = [
  "app/src-tauri",
  # "crates/*",
]

[workspace.dependencies]
# anyhow = "1.0.70"
# prisma-client-rust =  { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "spacedrive", features = [
#   "rspc",
#   "sqlite-create-many",
#   "migrations",
#   "sqlite",
# ], default-features = false }
# prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "spacedrive", features = [
#   "rspc",
#   "sqlite-create-many",
#   "migrations",
#   "sqlite",
# ], default-features = false }
# serde = { version = "1.0.160", features = ["std", "derive"] }
#
# rspc = { version = "0.1.3" }
# # specta = { version = "0.0.6" }
# # httpz = { version = "0.0.3" }
#
# # swift-rs = { version = "1.0.1" }
#
# tokio = { version = "1.25.0", features = ["sync", "rt-multi-thread", "signal"] }

# [patch.crates-io]
# specta = { git = "https://github.com/oscartbeaumont/specta" }
